--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ comm==0.2.2
 debugpy==1.8.12
 decorator==5.1.1
 executing==2.1.0
+geopandas==1.0.1
+greenlet==3.1.1
 idna==3.10
 ipykernel==6.29.5
 ipython==8.31.0
@@ -22,17 +24,25 @@ pexpect==4.9.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.50
 psutil==6.1.1
+psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
 Pygments==2.19.1
+pyogrio==0.10.0
+pyproj==3.7.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 pyzmq==26.2.0
 requests==2.32.3
+setuptools==75.8.2
+shapely==2.0.7
 six==1.17.0
+SQLAlchemy==2.0.38
 stack-data==0.6.3
 tornado==6.4.2
 traitlets==5.14.3
+typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
 wcwidth==0.2.13
+wheel==0.45.1
